--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <nav>
             <ul class="menu">
                 <li><a href="#">Home</a></li>
-                <li><a href="#">Detahes</a></li>
+                <li><a href="#">Detalhes</a></li>
             </ul>
         </nav>
     </header>
